# Qfilter

./: .clang-format  .gitignore  CMakeLists.txt  README.md  analogclock.cpp  analogclock.h  filteredcompleter.cpp  filteredcompleter.h  filterutils.cpp  filterutils.h  grandfatherclock.cpp  grandfatherclock.h  gshockdigital.cpp  gshockdigital.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  othello.cpp  othello.h  rolexclock.cpp  rolexclock.h
tests/: filterutils_test.cpp
